<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ArduSim</groupId>
  <artifactId>ArduSim</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
        <id>local-maven-repo</id>
        <url>file:///${project.basedir}/local-maven-repo</url>
    </repository>
    <repository>
        <id>repo-including-sigar</id>
        <url>https://maven.repository.redhat.com/ga/</url>
    </repository>
</repositories>
  <dependencies>
  	<dependency>
  		<groupId>com.google.code.gson</groupId>
  		<artifactId>gson</artifactId>
  		<version>2.8.6</version>
  	</dependency>
  	<dependency>
  		<groupId>org.javatuples</groupId>
  		<artifactId>javatuples</artifactId>
  		<version>1.2</version>
  	</dependency>
  	<dependency>
  		<groupId>com.fazecast</groupId>
  		<artifactId>jSerialComm</artifactId>
  		<version>2.5.3</version>
  	</dependency>
  	<!-- objenesis is used by kryo -->
  	<dependency>
  		<groupId>org.objenesis</groupId>
  		<artifactId>objenesis</artifactId>
  		<version>3.1</version>
  	</dependency>
  	<!-- reflectasm is used by kryo -->
  	<dependency>
  		<groupId>com.esotericsoftware</groupId>
  		<artifactId>reflectasm</artifactId>
  		<version>1.11.9</version>
 <!-- 		<type>bundle</type> -->
  	</dependency>
  	<!-- minlog is used by kryo -->
  	<dependency>
  		<groupId>com.esotericsoftware</groupId>
  		<artifactId>minlog</artifactId>
  		<version>1.3.1</version>
 <!-- 		<type>bundle</type> -->
  	</dependency>
  	<dependency>
  		<groupId>com.esotericsoftware</groupId>
  		<artifactId>kryo</artifactId>
  		<version>5.0.0-RC4</version>
 <!-- 		<type>bundle</type> -->
  	</dependency>
  	<dependency>
  		<groupId>org.hyperic</groupId>
  		<artifactId>sigar</artifactId>
  		<version>1.6.5.132-7</version>
  	</dependency>
  	<dependency>
  		<groupId>es.upv.grc</groupId>
  		<artifactId>mapper</artifactId>
  		<version>1.0</version>
  	</dependency>
  	<dependency>
  		<groupId>com.github.haifengl</groupId>
  		<artifactId>smile-core</artifactId>
  		<version>1.5.3</version>
  	</dependency>
  	<dependency>
  		<groupId>com.github.haifengl</groupId>
  		<artifactId>smile-data</artifactId>
  		<version>1.5.3</version>
  	</dependency>
  	<dependency>
  		<groupId>com.github.haifengl</groupId>
  		<artifactId>smile-math</artifactId>
  		<version>1.5.3</version>
  	</dependency>
  	<dependency>
  		<groupId>com.github.haifengl</groupId>
  		<artifactId>smile-interpolation</artifactId>
  		<version>1.5.3</version>
  	</dependency>
  	<dependency>
  		<groupId>org.slf4j</groupId>
  		<artifactId>slf4j-log4j12</artifactId>
  		<version>1.7.25.redhat-00001</version>
  	</dependency>
  	<dependency>
  		<groupId>io.dronefleet.mavlink</groupId>
  		<artifactId>mavlink</artifactId>
  		<version>1.1.6</version>
  	</dependency>
	  <dependency>
		  <groupId>org.openjfx</groupId>
		  <artifactId>javafx-fxml</artifactId>
		  <version>14</version>
	  </dependency>
	  <dependency>
		  <groupId>org.openjfx</groupId>
		  <artifactId>javafx-controls</artifactId>
		  <version>14</version>
	  </dependency>

  </dependencies>
</project>